--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
         <div class="header">
             <h1>Memory game</h1>
             <p>Train your brain.</p>
-            <p id="turns">Turns: 0</p>
+            <div class="stats">
+                <p id="timer"><time>00:00</time></p>
+                <p id="turns">Turns: 0</p>
+            </div>
             <input type="image" src="images/reset_arrow.png" class="startButton" onclick="startGame()">
         </div>
     </div>
